<resources>
    <string name="app_name">Part Of Body App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="partofbody_logo">part of body logo</string>
    <string name="letsplaywithyourbrain">Lets play with your brain about your part of body</string>
    <string name="Welcome">AY SOBAT, SELAMAT DATANG DI APLIKASI PART OF BODY</string>
    <string name="ayo_mulai_belajar">Ayo mulai belajar bagian-bagian tubuh manusia</string>
    <string name="about">
        "Aplikasi part of body.\n\n"
        "Merupakan aplikasi yang berguna untuk membantu niat anak sekolah dasar dalam belajar bahasa inggris dengan mulai memperkenalkan lebih dalam tentang bagian-bagian tubuh manusia.""\n\n.Dengan adanya aplikasi ini anak sekolah dasar akan lebih mudah dalam belajar bahasa inggris.""\n\nDidalam aplikasi ini terdapat menu menu yang nantinya dapat dipilih sesuai keinginan, diantaranya menu about us, learn, play game, dan kamus."</string>
    <string name="cara_penggunaan">
        "<b>CARA PENGGUNAAN:</b>"
        "\n\n-Menu about berisikan infomasi  mengenai penggunaan aplikasi ini."
        "\n\n-Menu learn, siswa sekolah dasar dapat belajar dan melihat detai dari penjelasan per gambar mengenai bagian-bagian tubuh manusia  dengan bahasa Indonesia dan bahasa inggris."
        "\n\n-1 Menu play game, ini terdapat game tebak gambar dengan 2 option menjawab yaitu speech input dan input text, serta game terdiri dari 3 level. Level 1 adalah bagian kepala, level 2 adalah bagian tubuh bawah meliputi badan dan kaki, level 3 adalah bagian tubuh dalam yang perlu diketahui oleh anak sekolah dasar."
        "\n\n-Menu Kamus, siswa dapat mentranslate bagian-bagian tubuh manusia yang diinginkan"
    </string>
    <string name="des_learn">learn_icon</string>
    <string name="des_playgame">playgame_icon</string>
    <string name="image_body">img_body</string>
    <string name="title_activity_learn_result">LearnResultActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_learn_view">LearnViewActivity</string>
    <string name="unknown">Unknown</string>
    <string name="search">Search</string>
    <string name="no_result">Tidak ada hasil</string>
    <string name="button_viewdetail">button view detail</string>
    <string name="input_bagian_tubuh">Inputkan Satu Kata Bagian Tubuh</string>
    <string name="ayo_bermain">
        "Silakan Pilih Level untuk memulai permainan..\n\n"
        "Tekan tombol info dibawah kanan untuk tau cara mainnya."
    </string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="tutor_game">
        "<b>1</b> Perhatikan gambar dengan seksama."
        "\n<b>2</b> Masukkan jawabanmu yang tepat pada Input Text."
        "\n<b>3</b> Jawab dengan tepat sebelum estimasi waktu habis."
        "\n<b>4</b> Jika jawabanmu BENAR lanjut ke gambar berikut."
    </string>
    <string name="jawaban">Jawaban Bahasa Indo</string>
    <string name="checkAnswer">checkAnswer</string>
    <string name="leher">Leher</string>
    <string name="lengan">Lengan</string>
    <string name="siku">Siku</string>
    <string name="jaritangan">Jari Tangan</string>
    <string name="kaki">Kaki</string>
    <string name="lutut">Lutut</string>
    <string name="otot">Otot</string>
    <string name="bahu">Bahu</string>
    <string name="tangan">Tangan</string>
    <string name="punggung">Punggung</string>
    <string name="paruparu">Paru-paru</string>
    <string name="otak">Otak</string>
    <string name="perut">Perut</string>
    <string name="lidah">Lidah</string>
    <string name="hati">Hati</string>
    <string name="darah">Darah</string>
    <string name="tulang">Tulang</string>
    <string name="usus">Usus</string>
    <string name="jantung">Jantung</string>
    <string name="ginjal">Ginjal</string>
    <string name="selamatdatang">Selemat Datang</string>
    <string name="nikmatimudahnya">Nikmati mudahnya belajar bagian bagian tubuh</string>

    <array name="level1">
        <item>Kepala</item>
        <item>Rambut</item>
        <item>Telinga</item>
    </array>
    <array name="level2">
        <item>Tangan</item>
        <item>Jari</item>
        <item>Tumit</item>
    </array>
    <array name="level3">
        <item>Lidah</item>
        <item>Jantung</item>
        <item>Hati</item>
    </array>
</resources>
