<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/background">
    <include
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <include
        layout="@layout/app_infogame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:text="@string/ayo_bermain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_gamelv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level1"
            android:background="@drawable/shape_circle"
            android:layout_marginBottom="10dp"
            android:onClick="startgamelvOnclick"/>
        <Button
            android:id="@+id/btn_gamelv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level2"
            android:background="@drawable/shape_circle"
            android:layout_marginBottom="10dp"
            android:onClick="startgamelvOnclick"/>
        <Button
            android:id="@+id/btn_gamelv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level3"
            android:background="@drawable/shape_circle"
            android:onClick="startgamelvOnclick"/>
    </LinearLayout>
</RelativeLayout>