<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    <include layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingTop="10dp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:src="@drawable/ic_learn"
            android:layout_weight="0.50"
            android:padding="35dp"
            android:layout_gravity="left"
            android:contentDescription="@string/des_learn"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:src="@drawable/ic_playgame"
            android:layout_weight="0.50"
            android:padding="35dp"
            android:layout_gravity="right"
            android:contentDescription="@string/des_playgame"/>
    </LinearLayout>
</LinearLayout>