<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    <include layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <SearchView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchInput"
            android:gravity="center_horizontal"
            android:queryHint="Cari Nama Bagian Tubuh"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_circle"/>
        <TextView
            android:id="@+id/txt_validatesearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_result"
            android:textStyle="italic"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/layoutKamusDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/txt_kamusResult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/unknown"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <!--<ImageButton-->
                <!--android:id="@+id/btn_detailKamus"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_detail"-->
                <!--android:contentDescription="@string/button_viewdetail"/>-->
        </LinearLayout>
    </LinearLayout>
</LinearLayout>